tests/ui/suggestions/assoc-type-in-method-return.stderr
error[E0412]: cannot find type `Bla` in this scope
  --> $DIR/assoc-type-in-method-return.rs:3:25
   |
LL |     fn to_bla(&self) -> Bla;
   |                         ^^^
   |
help: you might have meant to use the associated type
   |
LL |     fn to_bla(&self) -> Self::Bla;
   |                         ++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
